--- a/spring-bbot-mongo-nfs.yaml
+++ b/spring-bbot-mongo-nfs.yaml
@@ -1,27 +1,27 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: springappdeployment
+  name: springappdep
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: Springapp
+      app: springapp
   template:
     metadata:
       labels:
-        app: Springapp
+        app: springapp
     spec:
       containers:
-      - name: Springappcontainer
+      - name: springappcontainer
         image: dockerhandson/spring-boot-mongo:1
         resources:
           limits:
-            memory: "512Mi"
-            cpu: "500m"
+            memory: 512Mi
+            cpu: 500m
           requests:
-            memory: "200Mi"
-            cpu: "256m"    
+            memory: 250Mi
+            cpu: 256m
         ports:
         - containerPort: 8080
         env:
@@ -30,18 +30,20 @@ spec:
         - name: MONGO_DB_PASSWORD
           value: devdb@123
         - name: MONGO_DB_HOSTNAME
-          value: mongosvc 
+          value: mongosvc
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: springappsvc
 spec:
+  type: NodePort
   selector:
-    app: Springapp
+    app: springapp
   ports:
   - port: 80
     targetPort: 8080
+---
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -58,9 +60,10 @@ spec:
         app: mongo
     spec:
       volumes:
-      - name: mongodbhostpathvol
-        hostPath:
-          path: /tmp/mongodb     
+      - name: mongodbnfsvol
+        nfs:
+          server: 172.31.36.95
+          path: /mnt/share
       containers:
       - name: mongocontainer
         image: mongo
@@ -71,9 +74,9 @@ spec:
            value: devdb
          - name: MONGO_INITDB_ROOT_PASSWORD
            value: devdb@123
-      volumeMounts:
-      - name: hostpathvol
-        mountPath: /data/db  
+        volumeMounts:
+        - name: mongodbnfsvol
+          mountPath: /data/db
 ---
 apiVersion: v1
 kind: Service
@@ -85,8 +88,3 @@ spec:
   ports:
   - port: 27017
     targetPort: 27017
-
-
-
-
-
